tried 14_intake, but error with flask

--- a/14_intake/templates/login.html
+++ b/14_intake/templates/login.html
@@ -31,6 +31,11 @@
     <h3>
       Enter your username below to proceed.
     </h3>
+<!--
+Predictions:
+Here, we will have a basic login type page on the screen, with an auth action on a form witht the option for username and a button to submit. 
+When the submit button is pressed, the website redirects to /auth and displays the message on that page.   
+-->
     <form action="/auth">
       <input type="text" name="username">
       <input type="submit" name="sub1">
