--- a/14_intake/templates/login.html
+++ b/14_intake/templates/login.html
@@ -38,6 +38,8 @@ When the submit button is pressed, the website redirects to /auth and displays t
 -->
     <form action="/auth">
       <input type="text" name="username">
+      <!--Here, we see that the username argument and value is assigned to the text inputted there, which is used as an argument in the app.py. The submit box confirms
+      this information and moves us to the auth page, displaying the username, which wasn't possible to access before the auth.-->
       <input type="submit" name="sub1">
     </form>
     <br>
